updating surefire plugin

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 						<!-- TestNG suite XML files -->
 						<suiteXmlFile>RestAPITestSuite.xml</suiteXmlFile>
 						<!-- <suiteXmlFile>${suiteFile}</suiteXmlFile> -->
+						<suiteXmlFile>OtherAPITestSuite.xml</suiteXmlFile>
 					</suiteXmlFiles>
 					<testErrorIgnore>false</testErrorIgnore>
 					<testFailureIgnore>false</testFailureIgnore>
