--- a/pom.xml
+++ b/pom.xml
@@ -156,21 +156,25 @@
 			<artifactId>json-path</artifactId>
 			<version>3.2.0</version>
 		</dependency>
-
+	
 		<!-- https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>json-schema-validator</artifactId>
 			<version>3.2.0</version>
 		</dependency>
-
+	
 		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>3.2.0</version>
+		</dependency>
 
 	</dependencies>
 </project>
