updating tests part 2

--- a/APITestConfig.properties
+++ b/APITestConfig.properties
@@ -1,6 +1,8 @@
 baseURLStaging = https://jsonplaceholder.typicode.com
 baseURLProd = https://samples.openweathermap.org
 baseReqresURI = https://reqres.in
+baseURI = https://qa.rbshoes.com
+authenticationURI = https://login.microsoftonline.com
 
 timeLimit = 10
 timeLimitL = 45000L
@@ -9,4 +11,4 @@ tileKey2Prod = ********-923e-484a-****-***********
 authorization = RBShoeTestKey
 xAPIKey = ********-c064-8ef9-bd3f-0000111111111
 
-jsonDataLocation = src/test/java/com/JSON_Data/data/
+jsonDataLocation = src/test/java/com/TestNGTtestData/data/
